# otus-cpp-hw6

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  mymatrix.cpp  mymatrix.hpp  mymatrix.inl
tests/: test.cpp
